# MEKIKI

./: .gitattributes  .gitignore  AGENTOPS_PROMPT.md  CLAUDE.md  ROOT_AUTONOMOUS_ORCHESTRA_SPEC.md  _ul  _ul-RAIKOU  api_keys.json  package-lock.json  package.json  pytest.ini  result.txt  vitest.config.ts
sitemap_pro/: .env.example  README.md  Sitemap_Pro_Design_Doc.md  __init__.py  debug_crawl.py  debug_init.py  debug_schema.py  pyproject.toml  requirements.txt  run_mvp.py  run_report_test.py  sitemap.db  test_auth_crawl.py  test_crawl.py  verify_setup.py
sitemap_pro/OCRappBackupFile/251219_OCR_scanapp_backup01_scan/: .env.example  CHANGELOG.md  GUI_USAGE.md  pyproject.toml
sitemap_pro/OCRappBackupFile/251220_Before_Change/: EXCEL_REPORT_IMPLEMENTATION.md  GUI_V2_SUMMARY.md  IMAGE_ERROR_COMPLETE_FIX.md  IMAGE_ERROR_FIX.md  MAPPING_VIEW_IMPROVEMENT.md  USER_MANUAL.md  VISUAL_COMPARISON_IMPLEMENTATION.md  requirements.txt
sitemap_pro/OCRappBackupFile/251220_NewOCR_B4Claude/: INTERACTIVE_CANVAS_GUIDE.md  NEW_PROJECT_SUMMARY.md  ONION_SKIN_IMPLEMENTATION.md  auth.json  check_account.py  main.py  requirements.txt  test_main_window.py  test_pdf_loader.py
sitemap_pro/OCRappBackupFile/251220_NewOCR_web00/: main.py  sitemap_view.html  verify_import.py
sitemap_pro/OCRappBackupFile/251221_OCR_Web_PDF_01/: main.py
sitemap_pro/app/: __init__.py  crawler_runner.py
sitemap_pro/app/api/: endpoints.py
sitemap_pro/docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  TASK.md
sitemap_pro/sitemap_pro/: __init__.py
sitemap_pro/sitemap_pro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+635 files in other folders)
